# BarcodeScanner

./: .gitignore  BarcodeDecoder.cpp  BarcodeDecoder.h  BarcodeDetector.cpp  BarcodeDetector.h  CMakeLists.txt  LICENSE  README.md  barcode_demo.cpp
